--- a/src/DadJokes.css
+++ b/src/DadJokes.css
@@ -22,3 +22,36 @@
     overflow-x: hidden;
     background-color: #7ae7c7;
 }
+
+@media screen and (max-width: 415px) {
+
+    .DadJokes {
+        display: grid;
+        grid-template-columns: 1fr;
+        width: 100%;
+        height: 100%;
+        box-shadow: #ecdfc8 4px 4px;
+    
+    }
+}
+
+@media screen and (max-height: 360px) {
+    .DadJokes{
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media screen and (max-height: 1024px) {
+    .DadJokes{
+        height: 100%;
+        width: 100%;
+    }
+}
+
+@media screen and (max-height: 1280px) {
+    .DadJokes{
+        height: 90%;
+        width: 90%;
+    }
+}
